<resources>
    <string name="app_name" translatable="false">Fit&amp;App</string>
    <string name="application_name" translatable="false">FiFood</string>
    <string name="facebook_app_id" translatable="false">609787966818450</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="image_description">image</string>
    <string name="let_s_get_started_label">Let\'s get started</string>
    <string name="start_description_label">Stay healthy by planning your diet and exercises in FiFood Application</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="your_metrics">Your Metrics</string>
    <string name="height">Height</string>
    <string name="data_cm" translatable="false">%1$s cm</string>
    <string name="_180_cm" translatable="false">180 cm</string>
    <string name="_80_kg" translatable="false">80 kg</string>
    <string name="fill_the_information_label">Please fill the information below</string>
    <string name="gender">Gender</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="example_gmail_com" translatable="false">example@gmail.com</string>
    <string name="last_details">Last details</string>
    <string name="we_need_them_to_calculate_your_bmi">We need them to calculate your BMI</string>
    <string name="meals">Meals</string>
    <string name="activities">Activities</string>
    <string name="finish">Finish</string>
    <string name="password">Password</string>
    <string name="type_your_password_again">Type your password again</string>
    <string name="type_your_password">Type your password</string>
    <string name="retype_password">Retype Password</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_new_acc">New Account</string>
    <string name="welcome_desc_sign_in">Please sign in and get started.</string>
    <string name="welcome_desc_sign_up">Please sign up and get started.</string>
    <string name="error_email_empty">Please fill email field!</string>
    <string name="error_pass_8_char">Password must contain at least 8 characters!</string>
    <string name="error_pass_not_equal">Password are not the same!</string>
    <string name="error_field_empty">%1$s field is empty!</string>
    <string name="error_overall">You left %1$s field blank or out of %2$d–%3$d age range!</string>
    <string name="error_height_weight_overall">Height and Weight field is empty or out of range!</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_wait">Please wait</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_out">Sign out</string>
    <string name="example_1594" translatable="false">1594</string>
    <string name="kcal_to_go">kcal to go</string>
    <string name="eaten">Eaten</string>
    <string name="example_1200" translatable="false">1200</string>
    <string name="example_kg_112_4" translatable="false">102.4</string>
    <string name="g_left">%1$s g left</string>
    <string name="g" translatable="false">%1$s g</string>
    <string name="burned">Burned</string>
    <string name="kcal" translatable="false">kcal</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="example_142" translatable="false">142</string>
    <string name="kg" translatable="false">kg</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="weight">Weight</string>
    <string name="weight_data">Weight (%1$s)</string>
    <string name="updated_day_time">Updated %1$s %2$s</string>
    <string name="example_updated_day_time">Updated Yesterday 21:20</string>
    <string name="age">Age</string>
    <string name="dishes">Dishes</string>
    <string name="number_of_dishes">Number of Dishes</string>
    <string name="example_percent_35" translatable="false">35%</string>
    <string name="example_bmi_31_48" translatable="false">31.48</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="example_liter_2_5l" translatable="false">2.5L</string>
    <string name="of_daily_goal">of daily goal</string>
    <string name="example_ml_1200_ml" translatable="false">1200</string>
    <string name="weight_kg_change" translatable="false">%1$s kg</string>
    <string name="weight_change">Weight change</string>
    <string name="how_many_meals_a_day">How many meals a day?</string>
    <string name="today_day">Today</string>
    <string name="yesterday_day">Yesterday</string>
    <string name="change_data">Add new %1$s</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="right_date" translatable="false"><![CDATA[>]]></string>
    <string name="left_date" translatable="false"><![CDATA[<]]></string>
    <string name="new_weight">New Weight</string>
    <string name="new_water">New Water Volume</string>
    <string name="new_exercise">New Exercise</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="alert">Alert</string>
    <string name="alert_exercise_desc">Do you want delete this Exercise?</string>
    <string name="alert_dish_desc">Do you want delete this Dish?</string>
    <string name="exercise">Exercise</string>
    <string name="data_kcal" translatable="false">%1$s kcal</string>
    <string name="add_food">ADD FOOD</string>
    <string name="add_food_sc">Add Food</string>
    <string name="lunch" translatable="false">Lunch</string>
    <string name="water">Water</string>
    <string name="kcal_eaten_burned">Kcal eaten/burned</string>
    <string name="workout">Workout</string>
    <string name="type">Type</string>
    <string name="time">Time (minutes:seconds)</string>
    <string name="diet">Diet</string>
    <string name="recommended_kcal">Recommended:\n%1$s kcal</string>
    <string name="new_dish">New Dish</string>
    <string-array name="settings_titles">
        <item>Credentials</item>
        <item>Activity</item>
        <item>Meal</item>
    </string-array>
    <string-array name="food_units">
        <item>100 g</item>
        <item>100 ml</item>
        <item>1 portion</item>
    </string-array>
    <string-array name="food_only_units">
        <item>g</item>
        <item>ml</item>
        <item>portion</item>
    </string-array>
    <string-array name="food_type_of_diet">
        <item>Anything</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
    <string-array name="food_titles">
        <item>Search</item>
        <item>My Food</item>
    </string-array>
    <string-array name="dishes_name_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Teatime</item>
        <item>Supper</item>
    </string-array>
    <string-array name="water_array">
        <item>empty</item>
        <item>percent20</item>
        <item>percent40</item>
        <item>percent60</item>
        <item>percent80</item>
        <item>percent100</item>
        <item>percentover100</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="gender_image_array">
        <item>male_icon</item>
        <item>female_icon</item>
        <item>other_icon</item>
    </string-array>
    <string-array name="activity_array">
        <item>Sedentary</item>
        <item>Light</item>
        <item>Moderate</item>
        <item>Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>
    <string-array name="activity_description_array">
        <item>Little or no exercise</item>
        <item>Exercise 1–3 times/week</item>
        <item>Exercise 4–5 times/week</item>
        <item>Daily exercise or intense exercise 3–4 times/week</item>
        <item>Intense exercise 6–7 times/week</item>
        <item>Very intense exercise daily or physical job</item>
    </string-array>
    <string-array name="progress_array">
        <item>Fast Weight Gain</item>
        <item>Weight Gain</item>
        <item>Mild Weight Gain</item>
        <item>Maintain Weight</item>
        <item>Mild Weight Loss</item>
        <item>Weight Loss</item>
        <item>Extreme Weight Loss</item>
    </string-array>
    <string-array name="progress_description_array">
        <item>+1 kg/week</item>
        <item>+0.5 kg/week</item>
        <item>+0.25 kg/week</item>
        <item> 0 kg/week</item>
        <item>-0.25 kg/week</item>
        <item>-0.5 kg/week</item>
        <item>-1 kg/week</item>
    </string-array>
    <string name="auto_assign">Auto Diet</string>
</resources>