<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="inz.mb.pl.app.fitapp.ui.main.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="inz.mb.pl.app.fitapp.ui.main.DashboardFragment"
        android:label="@string/workout"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_diet"
        android:name="inz.mb.pl.app.fitapp.ui.main.NotificationsFragment"
        android:label="@string/diet"
        tools:layout="@layout/fragment_notifications" />


</navigation>