<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/palette_gray"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/start_screen_title_text_margin_top"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/application_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/start_title_text_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/start_screen_image_margin_top"
        android:contentDescription="@string/image_description"
        android:src="@drawable/jogging_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_margin_top"
        android:fontFamily="@font/cabin_semibold"
        android:text="@string/let_s_get_started_label"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_text_margin_start_end"
        android:layout_marginTop="@dimen/start_text_marginTop"
        android:layout_marginEnd="@dimen/start_text_margin_start_end"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/start_text_line_spacing"
        android:text="@string/start_description_label"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/start_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/white_rounded_button"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size" />
</LinearLayout>