<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/palette_gray">


    <include layout="@layout/left_title_component" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/constraint_get_started"
        android:layout_below="@+id/constraint_get_started"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/line_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/age_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/age"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="180"
                    android:background="@drawable/edit_text_drawable"
                    android:elevation="@dimen/edit_text_field_elevation"
                    android:ems="13"
                    android:hint="25"
                    android:inputType="number"
                    android:outlineSpotShadowColor="@color/palette_light_blue"
                    android:padding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:shadowColor="@color/palette_light_blue"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/gender"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_drawable"
                    android:dropDownWidth="match_parent"
                    android:elevation="@dimen/edit_text_field_elevation"
                    android:ems="13"
                    android:minHeight="50dp"
                    android:outlineSpotShadowColor="@color/palette_light_blue"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:shadowColor="@color/palette_light_blue"
                    android:spinnerMode="dialog" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button_first_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/cabin_semibold"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lin_layout" />

        <ImageView
            android:layout_width="309dp"
            android:layout_height="237dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/chef_monochromatic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>